new java features, vm option for VectorAPI